crates/forge/tests/e2e/snapshots/main__e2e__gas_report__multiple_contracts_and_constructor@2.11.4.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---
[PASS] simple_package_with_cheats_integrationtest::contract::call_and_invoke_proxy (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~893550)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_block_number       | 16280 | 16280 | 16280 | 0       | 2       |
╰------------------------+-------+-------+-------+---------+---------╯

╭-----------------------------+--------+--------+--------+---------+---------╮
| HelloStarknetProxy Contract |        |        |        |         |         |
+============================================================================+
| Function Name               | Min    | Max    | Avg    | Std Dev | # Calls |
|-----------------------------+--------+--------+--------+---------+---------|
| constructor                 | 15850  | 15850  | 15850  | 0       | 1       |
|-----------------------------+--------+--------+--------+---------+---------|
| get_block_number            | 126760 | 126760 | 126760 | 0       | 2       |
╰-----------------------------+--------+--------+--------+---------+---------╯
