crates/forge/tests/e2e/snapshots/main__e2e__gas_report__recursive_calls@2.11.4.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---
[PASS] debugging_integrationtest::test_trace::test_debugging_trace_success (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~1423090)
╭-------------------------+-------+--------+--------+---------+---------╮
| SimpleContract Contract |       |        |        |         |         |
+=======================================================================+
| Function Name           | Min   | Max    | Avg    | Std Dev | # Calls |
|-------------------------+-------+--------+--------+---------+---------|
| execute_calls           | 11970 | 631070 | 190182 | 244315  | 5       |
|-------------------------+-------+--------+--------+---------+---------|
| fail                    | 19460 | 19460  | 19460  | 0       | 1       |
╰-------------------------+-------+--------+--------+---------+---------╯
