crates/forge/tests/e2e/snapshots/main__e2e__gas_report__recursive_calls@2.12.1.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---
[PASS] debugging_integrationtest::test_trace::test_debugging_trace_success (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~1372270)
╭-------------------------+-------+--------+--------+---------+---------╮
| SimpleContract Contract |       |        |        |         |         |
+=======================================================================+
| Function Name           | Min   | Max    | Avg    | Std Dev | # Calls |
|-------------------------+-------+--------+--------+---------+---------|
| execute_calls           | 11680 | 609080 | 183924 | 235859  | 5       |
|-------------------------+-------+--------+--------+---------+---------|
| fail                    | 17950 | 17950  | 17950  | 0       | 1       |
╰-------------------------+-------+--------+--------+---------+---------╯
